fixed gap in login

--- a/styles/login_register.css
+++ b/styles/login_register.css
@@ -228,7 +228,7 @@ header {
 .login-form {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 25px;
     align-items: center;
 }
 
